--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -34,6 +34,7 @@
         (mouseleave)="onLeaveItem()"
         (activeMediaChange)="onActiveMediaChange($event)"
         [activeMedia]="activeMedia"
+        [isOriginals]="isOriginals"
       ></app-media-slider-item>
     </div>
     <div
