--- a/src/app/pages/media-browser-page/media-browser-page.component.html
+++ b/src/app/pages/media-browser-page/media-browser-page.component.html
@@ -15,8 +15,9 @@
         [medias]="medias"
       ></app-media-slider>
       <app-media-slider
-        [listTitle]="'Trending Now'"
-        [medias]="medias"
+        [listTitle]="'Originals'"
+        [medias]="mediasOriginals"
+        [isOriginals]="true"
       ></app-media-slider>
       <app-media-slider
         [listTitle]="'Trending Now'"
