--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
@@ -46,13 +46,23 @@
     transition: all 1000ms ease;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
 
-    &:hover {
+    &:not(&--no-delay):hover {
+      transition: all 1000ms ease 1000ms;
       opacity: 1;
       z-index: 1;
     }
 
     &--transparent {
       background: transparent;
+    }
+
+    &--no-delay {
+      transition: all 500ms ease;
+
+      &:hover {
+        opacity: 1;
+        z-index: 1;
+      }
     }
   }
 }
