--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -30,11 +30,12 @@
         *ngFor="let media of sliderItems; let i = index"
         [media]="media"
         [style.transform]="getTranformStyle(i)"
+        [ngClass]="getHoverClass()"
+        [activeMedia]="activeMedia"
+        [isOriginals]="isOriginals"
         (mouseenter)="onHoverItem(i)"
         (mouseleave)="onLeaveItem()"
         (activeMediaChange)="onActiveMediaChange($event)"
-        [activeMedia]="activeMedia"
-        [isOriginals]="isOriginals"
       ></app-media-slider-item>
     </div>
     <div
