--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -71,14 +71,12 @@
     }
 
     &--hover {
-      border: 1px solid black;
-      z-index: 10;
+      transition: all 500ms ease 1000ms;
     }
   }
 
   &__item-details {
     position: relative;
-    // background: red;
     top: -11px;
     width: 100%;
     height: 40vw;
