--- a/src/app/pages/media-browser-page/media-browser-page.component.html
+++ b/src/app/pages/media-browser-page/media-browser-page.component.html
@@ -15,16 +15,16 @@
         [medias]="medias"
       ></app-media-slider>
       <app-media-slider
-        [listTitle]="'Originals'"
+        [listTitle]="'NETFLIX ORIGINALS'"
         [medias]="mediasOriginals"
         [isOriginals]="true"
       ></app-media-slider>
       <app-media-slider
-        [listTitle]="'Trending Now'"
+        [listTitle]="'New Releases'"
         [medias]="medias"
       ></app-media-slider>
       <app-media-slider
-        [listTitle]="'Trending Now'"
+        [listTitle]="'Popular on Netflix'"
         [medias]="medias"
       ></app-media-slider>
     </div>
