--- a/src/app/components/watch-player/watch-player.component.html
+++ b/src/app/components/watch-player/watch-player.component.html
@@ -13,7 +13,7 @@
     (dblclick)="onToggleFullscreen()"
   ></video>
 
-  <div class="watch-player__header">
+  <div class="watch-player__header" #header>
     <div class="watch-player__header-title" *ngIf="loading">
       {{ media.title }}
     </div>
@@ -25,7 +25,7 @@
       <span class="watch-player__header-tooltip">Back to Browse</span>
     </div>
   </div>
-  <div class="watch-player__footer">
+  <div class="watch-player__footer" #footer>
     <div class="progress-bar">
       <div class="progress-bar__container">
         <div class="progress-bar__current" [style.width]="progress + '%'"></div>
