--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,36 +1,32 @@
 @import '../../../assets/scss/variables.scss';
 
-.container {
-  height: 100%;
-}
-
-.backdrop {
-  background: rgba(0, 0, 0, 0.4);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.background {
-  position: absolute;
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  background-size: cover;
-  z-index: -1;
-
-  &-image {
-    min-width: 100%;
-    min-height: 100%;
-  }
-}
-
-.form-container {
+.login-page {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
+
+  &__backdrop {
+    background: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__background {
+    position: absolute;
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background-size: cover;
+    z-index: -1;
+
+    &-image {
+      min-width: 100%;
+      min-height: 100%;
+    }
+  }
 }
 
 .login-form {
@@ -44,14 +40,14 @@
     flex-direction: column;
     padding: 60px;
     margin-bottom: 90px;
+  }
 
-    &-footer {
-      position: relative;
-      display: flex;
-      justify-content: space-between;
-      font-size: 12px;
-      color: $color-gray;
-    }
+  &__footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    color: $color-gray;
   }
 
   &__title {
