--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -40,7 +40,7 @@
     </div>
     <div
       *ngIf="showPrev"
-      class="leftArrow"
+      class="slider__leftArrow"
       ref="leftArrow"
       (click)="handlePrevious()"
     >
@@ -53,7 +53,7 @@
     </div>
     <div
       *ngIf="showNext"
-      class="rightArrow"
+      class="slider__rightArrow"
       ref="rightArrow"
       (click)="handleNext()"
     >
@@ -65,83 +65,9 @@
       ></i>
     </div>
   </div>
-  <div class="slider__item-details" *ngIf="activeMedia">
-    <div class="details__container">
-      <div class="details__background">
-        <div class="details__sketch"></div>
-        <div
-          class="details__image"
-          [style.backgroundImage]="'url(' + activeMedia.billboard + ')'"
-        ></div>
-      </div>
-      <div class="details__infos">
-        <img
-          [src]="activeMedia.thumbnailLogo"
-          class="details__thumbnail-logo"
-        />
-        <div class="details__meta">
-          <div class="details__match">{{ activeMedia.match }}</div>
-          <div class="details__last-release">{{ activeMedia.lastRelease }}</div>
-          <div class="details__maturity" appMaturityStyle>
-            {{ activeMedia.maturity }}
-          </div>
-          <div class="details__duration">{{ activeMedia.duration }}</div>
-        </div>
-        <div class="details__synopsis">{{ activeMedia.synopsis }}</div>
-        <div class="details__buttons">
-          <div
-            class="details__button details__button--red"
-            routerLink="/watch/{{ activeMedia.id }}"
-          >
-            <i class="fas fa-play details__button-icon"></i>
-            <span>PLAY</span>
-          </div>
-          <div class="details__button details__button--bordered">
-            <i class="fas fa-plus details__button-icon"></i>
-            <span>MY LIST</span>
-          </div>
-          <div
-            class="details__button details__button--bordered details__button--rounded"
-          >
-            <i class="far fa-thumbs-up"></i>
-          </div>
-          <div
-            class="details__button details__button--bordered details__button--rounded"
-          >
-            <i class="far fa-thumbs-down"></i>
-          </div>
-        </div>
-        <div class="details__starring">
-          <span>Starring: </span>
-          <div
-            class="details__starring-item"
-            *ngFor="let starring of activeMedia.starring; let isLast = last"
-          >
-            {{ starring }}{{ isLast ? '' : ',' }}
-          </div>
-        </div>
-        <div class="details__genres">
-          <span>Genres: </span>
-          <div
-            class="details__genres-item"
-            *ngFor="let genre of activeMedia.genres; let isLast = last"
-          >
-            {{ genre }}{{ isLast ? '' : ',' }}
-          </div>
-        </div>
-        <div class="details__tags">
-          <span>This movie is: </span>
-          <div
-            class="details__tags-item"
-            *ngFor="let tag of activeMedia.tags; let isLast = last"
-          >
-            {{ tag }}{{ isLast ? '' : ',' }}
-          </div>
-        </div>
-      </div>
-      <div class="details__close-button" (click)="onCloseMedia()">
-        <i class="fas fa-times"></i>
-      </div>
-    </div>
-  </div>
+  <app-media-slider-details
+    *ngIf="activeMedia"
+    [activeMedia]="activeMedia"
+    (closeMediaEvent)="onCloseMedia()"
+  ></app-media-slider-details>
 </div>
