--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
@@ -7,7 +7,7 @@
     background: transparent;
   }
 
-  &__arrow-container {
+  &__active-arrow {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -46,17 +46,14 @@
     transition: all 1000ms ease;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
 
-    &:not(&--no-delay):hover {
+    &:not(&--active-media):hover {
       transition: all 1000ms ease 1000ms;
       opacity: 1;
       z-index: 1;
     }
 
-    &--transparent {
+    &--active-media {
       background: transparent;
-    }
-
-    &--no-delay {
       transition: all 500ms ease;
 
       &:hover {
@@ -198,7 +195,7 @@
     margin-right: 10px;
   }
 
-  &__details {
+  &__arrow-down {
     display: flex;
     justify-content: center;
     margin-bottom: 5px;
