--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -75,256 +75,48 @@
     }
   }
 
-  &__item-details {
-    position: relative;
-    top: -11px;
-    width: 100%;
-    height: 40vw;
-    max-height: 85vh;
+  &__leftArrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 10px;
+    background: rgba(35, 35, 35, 0.3);
+    color: white;
+    font-size: 30px;
+    width: 4%;
+    height: calc(99% - 20px);
+    left: 0px;
+    z-index: 10;
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(35, 35, 35, 0.6);
+    }
   }
-}
 
-.leftArrow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 10px;
-  background: rgba(35, 35, 35, 0.3);
-  color: white;
-  font-size: 30px;
-  width: 4%;
-  height: calc(99% - 20px);
-  left: 0px;
-  z-index: 10;
-  cursor: pointer;
+  &__rightArrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 10px;
+    background: rgba(35, 35, 35, 0.3);
+    color: white;
+    font-size: 30px;
+    width: 4%;
+    height: calc(99% - 20px);
+    right: 0;
+    z-index: 10;
+    cursor: pointer;
 
-  &:hover {
-    background: rgba(35, 35, 35, 0.6);
-  }
-}
-
-.rightArrow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 10px;
-  background: rgba(35, 35, 35, 0.3);
-  color: white;
-  font-size: 30px;
-  width: 4%;
-  height: calc(99% - 20px);
-  right: 0;
-  z-index: 10;
-  cursor: pointer;
-
-  &:hover {
-    background: rgba(35, 35, 35, 0.6);
+    &:hover {
+      background: rgba(35, 35, 35, 0.6);
+    }
   }
 }
 
 .hide {
   display: none;
   color: transparent;
-}
-
-.details {
-  &__container {
-    display: flex;
-    height: 100%;
-    background-color: black;
-  }
-
-  &__background {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-
-  &__sketch {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 30%;
-
-    &::before {
-      content: ' ';
-      position: absolute;
-      top: 0;
-      left: 100%;
-      bottom: 0;
-      width: 275px;
-      background: linear-gradient(to right, #000, transparent);
-      z-index: 1;
-    }
-  }
-
-  &__image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 70%;
-    background-size: cover;
-  }
-
-  &__thumbnail-logo {
-    height: 7vw;
-  }
-
-  &__infos {
-    width: 40%;
-    position: relative;
-    z-index: 2;
-    margin: 18px 0 12px 4%;
-  }
-
-  &__meta {
-    display: flex;
-    align-items: center;
-    margin: 2px 0;
-    color: white;
-    margin-top: 20px;
-  }
-
-  &__match {
-    color: #46d369;
-    font-size: 1.1vw;
-    font-weight: 500;
-    margin-right: 0.4vw;
-  }
-
-  &__last-release {
-    font-size: 1.1vw;
-    margin: 0 0.4vw;
-  }
-
-  &__maturity {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 1.8vw;
-    height: 1.8vw;
-    border-radius: 1px;
-    margin: 0 0.4vw;
-    font-size: 1.1vw;
-  }
-
-  &__duration {
-    font-weight: bold;
-    font-size: 1.1vw;
-    margin-left: 0.4vw;
-  }
-
-  &__synopsis {
-    font-size: 1.4vw;
-    font-weight: 500;
-    color: #999;
-    line-height: 1.3;
-    margin-top: 1rem;
-
-    @media all and (min-width: 800px) {
-      font-size: 1.3vw;
-    }
-    @media all and (min-width: 1100px) {
-      font-size: 1.2vw;
-    }
-    @media all and (min-width: 1400px) {
-      font-size: 1.1vw;
-    }
-  }
-
-  &__buttons {
-    display: flex;
-    margin: 15px 0 20px 0;
-  }
-
-  &__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1vw;
-    font-weight: bold;
-    margin-right: 10px;
-    padding: 1.1vw 2vw;
-    height: 1.5vw;
-    cursor: pointer;
-    transition: transform 500ms ease;
-
-    &:hover {
-      transform: scale(1.1);
-    }
-
-    &--red {
-      background-color: red;
-      border: 2px solid red;
-    }
-
-    &--bordered {
-      border: 2px solid white;
-
-      &:hover {
-        border: 2px solid #828282;
-        background-color: rgba(35, 35, 35, 0.3);
-      }
-    }
-
-    &--rounded {
-      border-radius: 50%;
-      padding: 0;
-      height: 2.5vw;
-      width: 2.5vw;
-      border: 2px solid #828282;
-
-      &:hover {
-        border: 2px solid white;
-      }
-    }
-
-    &-icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.2vw;
-      width: 1.4vw;
-      height: 1.4vw;
-      margin-right: 10px;
-    }
-  }
-
-  &__close-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 30px;
-    cursor: pointer;
-    z-index: 1;
-  }
-
-  &__starring,
-  &__genres,
-  &__tags {
-    display: flex;
-    color: #828282;
-    font-weight: bold;
-    white-space: pre;
-    font-size: 1.4vw;
-    transition: opacity 200ms ease;
-
-    @media all and (max-width: 550px) {
-      opacity: 0;
-    }
-  }
-
-  &__starring-item,
-  &__genres-item,
-  &__tags-item {
-    color: #828282;
-    font-weight: 400;
-    white-space: pre;
-    font-size: 1.4vw;
-  }
 }
