--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
@@ -3,6 +3,7 @@
   [ngClass]="{
     'slider-item--active': active
   }"
+  (click)="onShowDetails()"
 >
   <div
     class="slider-item__background"
@@ -21,7 +22,7 @@
   >
     <div class="media-content">
       <div
-        routerLink="/watch/{{ media.id }}"
+        [routerLink]="['/watch', media.id]"
         class="media-content__play-container"
         [style.visibility]="active ? 'visible' : 'hidden'"
       >
@@ -60,9 +61,6 @@
             </div>
             <div class="media-content__button">
               <i class="far fa-thumbs-down"></i>
-            </div>
-            <div class="media-content__button">
-              <i class="fas fa-check"></i>
             </div>
             <div class="media-content__button">
               <i class="fas fa-plus"></i>
