--- a/src/app/components/media-slider/media-slider-details/media-slider-details.component.html
+++ b/src/app/components/media-slider/media-slider-details/media-slider-details.component.html
@@ -19,16 +19,20 @@
       </div>
       <div class="details__synopsis">{{ activeMedia.synopsis }}</div>
       <div class="details__buttons">
-        <div
-          class="details__button details__button--red"
-          [routerLink]="['/watch', activeMedia.id]"
-        >
-          <i class="fas fa-play details__button-icon"></i>
-          <span>PLAY</span>
+        <div class="details__button-wrapper">
+          <button
+            class="details__button details__button--red"
+            [routerLink]="['/watch', activeMedia.id]"
+          >
+            <i class="fas fa-play details__button-icon"></i>
+            <span>PLAY</span>
+          </button>
         </div>
-        <div class="details__button details__button--bordered">
-          <i class="fas fa-plus details__button-icon"></i>
-          <span>MY LIST</span>
+        <div class="details__button-wrapper">
+          <button class="details__button details__button--bordered">
+            <i class="fas fa-plus details__button-icon"></i>
+            <span>MY LIST</span>
+          </button>
         </div>
         <div
           class="details__button details__button--bordered details__button--rounded"
