--- a/src/app/components/billboard/billboard.component.scss
+++ b/src/app/components/billboard/billboard.component.scss
@@ -36,15 +36,20 @@
     display: flex;
   }
 
+  &__button-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__button {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2vw;
     font-weight: bold;
-    margin-right: 10px;
-    height: 1.5vw;
-    padding: 1.5vw 2vw;
+    margin-right: 1vw;
+    padding: 0.7vw 2vw;
     background: rgba(51, 51, 51, 0.4);
     border-radius: 2px;
     transition: transform 500ms ease;
