--- a/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
+++ b/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
@@ -1,31 +1,47 @@
 <div class="controls">
   <div class="controls__container">
     <div class="controls__left">
-      <button class="controls__button" (click)="onTogglePlaying()">
-        <i
-          class="fas fa-play controls__button-icon"
-          *ngIf="!mediaState.playing"
-        ></i>
-        <i
-          class="fas fa-pause controls__button-icon"
-          *ngIf="mediaState.playing"
-        ></i>
+      <button
+        id="play"
+        class="controls__button"
+        *ngIf="!mediaState.playing"
+        (click)="onPlay()"
+      >
+        <i class="fas fa-play controls__button-icon"></i>
       </button>
-      <button class="controls__button" (click)="onSeekBack()">
+      <button
+        id="pause"
+        class="controls__button"
+        *ngIf="mediaState.playing"
+        (click)="onPause()"
+      >
+        <i class="fas fa-pause controls__button-icon"></i>
+      </button>
+      <button id="seek-back" class="controls__button" (click)="onSeekBack()">
         <i class="fas fa-undo-alt controls__button-icon"></i>
       </button>
-      <button class="controls__button" (click)="onSeekForward()">
+      <button
+        id="seek-forward"
+        class="controls__button"
+        (click)="onSeekForward()"
+      >
         <i class="fas fa-redo controls__button-icon"></i>
       </button>
-      <button class="controls__button" (click)="onToggleMute()">
-        <i
-          class="fas fa-volume-up controls__button-icon"
-          *ngIf="!mediaState.muted"
-        ></i>
-        <i
-          class="fas fa-volume-mute controls__button-icon"
-          *ngIf="mediaState.muted"
-        ></i>
+      <button
+        id="mute"
+        class="controls__button"
+        *ngIf="!mediaState.muted"
+        (click)="onMute()"
+      >
+        <i class="fas fa-volume-up controls__button-icon"></i>
+      </button>
+      <button
+        id="unmute"
+        class="controls__button"
+        *ngIf="mediaState.muted"
+        (click)="onUnmute()"
+      >
+        <i class="fas fa-volume-mute controls__button-icon"></i>
       </button>
     </div>
     <div class="controls__center">
@@ -35,11 +51,20 @@
       <button class="controls__button">
         <i class="far fa-question-circle controls__button-icon"></i>
       </button>
-      <button class="controls__button" (click)="onToggleFullscreen()">
-        <i
-          class="fas fa-expand controls__button-icon"
-          *ngIf="!mediaState.fullscreen"
-        ></i>
+      <button
+        id="fullscreen"
+        class="controls__button"
+        *ngIf="!mediaState.fullscreen"
+        (click)="onFullscreen()"
+      >
+        <i class="fas fa-expand controls__button-icon"></i>
+      </button>
+      <button
+        id="fullscreen-exit"
+        class="controls__button"
+        *ngIf="mediaState.fullscreen"
+        (click)="onFullscreenExit()"
+      >
         <i
           class="fas fa-compress controls__button-icon"
           *ngIf="mediaState.fullscreen"
