Implemented tests for the WatchPlayerComponent

--- a/src/app/components/watch-player/watch-player.component.html
+++ b/src/app/components/watch-player/watch-player.component.html
@@ -6,6 +6,7 @@
 </div>
 <div class="watch-player">
   <video
+    id="player"
     #player
     [src]="media.mediaPath"
     class="watch-player-video"
