--- a/src/app/pages/account-page/account-page.component.html
+++ b/src/app/pages/account-page/account-page.component.html
@@ -14,7 +14,7 @@
             <div
               class="account-page__row-item account-page__row-item--underlined"
             >
-              <div class="account-page__row-item-name">
+              <div id="user-email" class="account-page__row-item-name">
                 {{ loggedUser.email }}
               </div>
               <div class="account-page__row-item-name">
@@ -41,7 +41,11 @@
             </div>
           </div>
         </div>
-        <div class="account-page__panel-row">
+        <div
+          id="last-watched"
+          class="account-page__panel-row"
+          *ngIf="lastWatchedMedias"
+        >
           <div class="account-page__row-section">
             LAST WATCHED
           </div>
