--- a/src/app/pages/media-browser-page/media-browser-page.component.html
+++ b/src/app/pages/media-browser-page/media-browser-page.component.html
@@ -2,31 +2,39 @@
 <div class="media-browser">
   <div class="media-browser__container">
     <div class="media-browser__billboard">
-      <app-billboard listTitle [media]="billboardMedia"></app-billboard>
+      <app-billboard
+        *ngIf="billboardMedia"
+        [media]="billboardMedia"
+      ></app-billboard>
     </div>
     <div class="media-browser__lists">
       <app-media-slider
-        *ngIf="myMedias.length > 0"
+        id="my-medias"
+        *ngIf="myMedias?.length"
         [listTitle]="'Continue Watching'"
         [medias]="myMedias"
       ></app-media-slider>
       <app-media-slider
+        id="trending"
         *ngIf="medias"
         [listTitle]="'Trending Now'"
         [medias]="medias"
       ></app-media-slider>
       <app-media-slider
+        id="originals"
         *ngIf="mediasOriginals"
         [listTitle]="'NETFLIX ORIGINALS'"
         [medias]="mediasOriginals"
         [isOriginals]="true"
       ></app-media-slider>
       <app-media-slider
+        id="releases"
         *ngIf="medias"
         [listTitle]="'New Releases'"
         [medias]="medias"
       ></app-media-slider>
       <app-media-slider
+        id="popular"
         *ngIf="medias"
         [listTitle]="'Popular on Netflix'"
         [medias]="medias"
