Implemented tests for the MediaSliderDetailsComponent

--- a/src/app/components/media-slider/media-slider-details/media-slider-details.component.html
+++ b/src/app/components/media-slider/media-slider-details/media-slider-details.component.html
@@ -21,6 +21,7 @@
       <div class="details__buttons">
         <div class="details__button-wrapper">
           <button
+            id="play"
             class="details__button details__button--red"
             [routerLink]="['/watch', activeMedia.id]"
           >
