Implemented tests for the MediaSliderComponent

--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -38,7 +38,7 @@
     </div>
     <div
       *ngIf="showPrev"
-      class="slider__leftArrow"
+      class="slider__left-arrow"
       ref="leftArrow"
       (click)="handlePrevious()"
     >
@@ -49,7 +49,7 @@
     </div>
     <div
       *ngIf="showNext"
-      class="slider__rightArrow"
+      class="slider__right-arrow"
       ref="rightArrow"
       (click)="handleNext()"
     >
