--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -75,7 +75,7 @@
     }
   }
 
-  &__leftArrow {
+  &__left-arrow {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,7 +95,7 @@
     }
   }
 
-  &__rightArrow {
+  &__right-arrow {
     display: flex;
     align-items: center;
     justify-content: center;
