--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.scss
@@ -96,9 +96,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 5vw;
-    width: 5vw;
-    font-size: 2.5vw;
+    height: 4vw;
+    width: 4vw;
+    min-width: 48px;
+    min-height: 48px;
+    font-size: 2vw;
     border: 3px solid white;
     border-radius: 50%;
     color: #828282;
