--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,5 +1,3 @@
-@import '../../../assets/scss/variables.scss';
-
 .login-page {
   display: flex;
   justify-content: center;
@@ -47,7 +45,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 12px;
-    color: $color-gray;
+    color: #f5f5f1;
   }
 
   &__title {
@@ -64,8 +62,8 @@
     margin-top: 15px;
     padding: 0 10px;
     border-radius: 4px;
-    background-color: $color-gray4;
-    color: $color-gray2;
+    background-color: #333333;
+    color: #8c8c8c;
     font-weight: 300;
   }
 
@@ -92,7 +90,7 @@
     font-weight: bold;
     margin: 24px 0 12px;
     padding: 14px;
-    background: $color-red;
+    background: #e50914;
     cursor: pointer;
   }
 
