Added media query to the header navigation

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -49,6 +49,10 @@
       align-items: center;
       justify-content: space-between;
       list-style-type: none;
+
+      @media all and (max-width: 800px) {
+        opacity: 0;
+      }
     }
 
     &-item {
